I have added visualizations from tableau and an interactive dashboard

--- a/index.ipynb
+++ b/index.ipynb
@@ -15,9 +15,19 @@
    "id": "c332a315",
    "metadata": {},
    "source": [
+    "PROBLEM STATEMENT\n",
+    "\n",
+    "The company is preparing to expand into the aviation industry but currently lacks a clear understanding of the risks associated with different types of aircraft. Entering this highly regulated and safety-sensitive sector without reliable data could expose the business to financial, operational, and reputational risks. To ensure a successful entry, it is critical to identify which aircraft types and models present the lowest risk profile."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fa9a754",
+   "metadata": {},
+   "source": [
     "PROPOSED SOLUTION\n",
     "\n",
-    "Use the aviation daraset to identify the lowest-risk aircraft to prioritize for purchase and operation."
+    "To address this challenge, we will analyze aviation accident data to uncover trends, risk factors, and safety performance across different aircraft categories. By cleaning, processing, and exploring the dataset, we can identify the models and configurations that historically demonstrate lower risk. This evidence-based approach will provide management with actionable recommendations on which aircraft to prioritize for purchase and operation, thereby minimizing exposure to high-risk assets.\n"
    ]
   },
   {
@@ -28,18 +38,17 @@
     "OBJECTIVES\n",
     "\n",
     "Main Objective:\n",
-    "\n",
-    "Recommend safe aircraft for the new aviation division.\n",
+    "To recommend the safest and most reliable aircraft options for the company’s new aviation division.\n",
     "\n",
     "Secondary Objectives:\n",
     "\n",
-    "Handle missing values and clean dataset.\n",
+    "Clean and preprocess the dataset by addressing missing values and inconsistencies.\n",
     "\n",
-    "Analyze trends by aircraft type, make, engines, etc.\n",
+    "Analyze accident trends across key dimensions such as aircraft type, manufacturer, model, and number of engines.\n",
     "\n",
-    "Create visualizations for stakeholders.\n",
+    "Develop clear and engaging visualizations to communicate findings to business stakeholders.\n",
     "\n",
-    "Summarize actionable business insights.\n"
+    "Translate technical analysis into actionable business insights that support strategic decision-making\n"
    ]
   },
   {
@@ -2357,7 +2366,7 @@
     "2. Modern aircraft benefit from better technology, design, and regulation, making them safer than older models.\n",
     "The company should select aircraft models with strong safety performance in the last 20 years and avoid purchasing outdated aircraft, even if they are low-cost.\n",
     "\n",
-    "Aircraft with consistently lower fatalities per event (e.g modern Cessna 172, Boeing 777) represent lower operational risk.\n",
+    "3. Aircraft with consistently lower fatalities per event (e.g modern Cessna 172, Boeing 777) represent lower operational risk.\n",
     "Begin with training and private rental operations using low-risk general aviation models and expand into larger, proven safe aircraft once infrastructure and operational readiness are established."
    ]
   },
@@ -2367,6 +2376,16 @@
    "metadata": {},
    "source": [
     "CONCLUSION"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebf1b021",
+   "metadata": {},
+   "source": [
+    "Aviation safety has improved significantly over time, though risks vary across aircraft types. Single-engine aircraft account for most accidents, while multi-engine and jet aircraft show stronger safety records. High accident counts for certain models reflect widespread use rather than poor design.\n",
+    "\n",
+    "The company should focus on modern, multi-engine aircraft with proven safety performance and avoid older or high-risk models. These data-driven choices will reduce operational risk and support a safe, sustainable entry into the aviation industry."
    ]
   }
  ],
